fix: update angular config for vercel deployment

--- a/angular.json
+++ b/angular.json
@@ -1,8 +1,11 @@
 {
+  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "version": 1,
+  "newProjectRoot": "projects",
   "projects": {
     "emergence-admin": {
       "projectType": "application",
-      "root": "",
+      "root": ".",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
@@ -32,7 +35,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
@@ -55,5 +57,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "3f68d2fa-7b34-4980-b512-536ee2000222"
   }
 }
